fix overflow

--- a/assets/sass/_page_styles.scss
+++ b/assets/sass/_page_styles.scss
@@ -10,6 +10,7 @@
     justify-content: center;
 
     overflow: hidden;
+    position: relative;
 
     h1, h2, h3 {
       width:80%;
